data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1285.wast
;; 6. **Test Description:** Implement a WASM function that performs a `br` directly into a `call_indirect` to an imported function, after manipulating the operand stack within nested blocks.    **Specific Constraint:** Ensures correct stack and operand stack height management before dynamic calls.    **Relation to Control Flow Boundaries:** Validates operand integrity and control flow safety when dynamic calls are involved, especially across modules.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32) (result i32)))
    (func $br_into_call_indirect
      (block
        (loop
          (block
            (br 2)
            (i32.const 10)
            (i32.const 20)
          )
          (call_indirect (type $t0) (i32.const 0) (br 1))
        )
      )
    )
    (table funcref (elem $external_func))
    (type $t0 (func (param i32) (result i32)))
  )
  "type mismatch"
)